feat: Change demo link of restaurant app

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </p>
             </div>
             <div class="button_cover">
-              <div class="button1" aria-label="View Demo of Restaurant app"><a href="https://chidexebere.github.io/Restaurant-Reviews-1/"
+              <div class="button1" aria-label="View Demo of Restaurant app"><a href="https://restaurant-reviews-2.firebaseapp.com"
                   target="_blank">DEMO </a></div>
               <div class="button2" aria-label="View source code of Restaurant app"><a href="https://github.com/chidexebere/Restaurant-Reviews-1"
                   target="_blank"> CODE</a></div>
