--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Chidiebere Onyegbuchulem</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Merienda+One|PT+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
@@ -61,7 +61,7 @@
         <div class="about" tabindex="0">
           <div id="intro">
             <h2 class="introduction"> Hi, I'm<br>Chidi</h2>
-            <p>
+            <p class="intro-pitch">
               A frontend web developer living in Lagos Nigeria.<br>
               Passionate about building and creating great experiences <br> on the web.
             </p>
