chore: Update currency converter URL

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   aria-label="View Demo of Currency Converter app"
                 >
                   <a
-                    href="https://chidexebere.github.io/CurrencyConverter/"
+                    href="https://chidex-currency-converter.firebaseapp.com/"
                     target="_blank"
                     >DEMO
                   </a>
