chore: Add gitignore and update footer

--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
       </main>
     </div>
 
-    <footer role="contentinfo"><p>© 2018 Chidiebere Onyegbuchulem</p></footer>
+    <footer class="footer" role="contentinfo">
+      <p class="footer-content">© 2018 Chidiebere Onyegbuchulem</p>
+    </footer>
   </body>
   <script src="js/main.js"></script>
 </html>
